# google-adk-ai-agent

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  render.yaml  server.py
agent_try/: agent.py  agent_runner.py  example_run.py  test_enhanced_agent.py
agent_try/tests/: test_agent.py  test_performance.py
docs/: api_reference.md  architecture.md
static/: index.html
